Fix whitespace under about page.

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,8 +1,11 @@
 #about {
     justify-content: flex-start;
 }
+.hero figure {
+    line-height: 0.7;
+}
 .hero figure figcaption {
-    
+    line-height: 1;
     h1 {
         margin-top: 25px;
         margin-bottom: 25px;
